test/errors/struct_missing_constructor_fail.hy
struct MissingCtor
{
    int value
}

// expect: Struct 'MissingCtor' must declare at least one constructor